# bcv_scraper

./: .gitignore  .pre-commit-config.yaml  config.py  main.py  pyproject.toml  pytest.ini  requirements.txt
bcv/: config.py
bcv/app/: main.py
bcv/config/: config.py
bcv/scraper/: downloader.py  exceptions.py  html_parser.py  http_client.py  pipeline.py  validation.py  xls_parser.py
scraper/: daily.py  exceptions.py  html_parser.py  http_client.py  pipeline.py  validation.py
tests/: smc-index.html  test_xls_parser.py
tests/integration/: test_download_all_rate_history_files.py
tests/samples/html/: bcv_homepage_2026-06-21.html
tests/unit/: conftest.py  test_http_client.py  test_xls_parser.py
